# paprefs

./: .gitignore  Makefile.am  autogen.sh  bootstrap.sh  configure.ac
doc/: Makefile.am  README.html.in  style.css
po/: .gitignore  LINGUAS  POTFILES.in  as.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  gu.po  hi.po  hu.po  it.po  kn.po  ko.po  ml.po  mr.po  ms.po  nl.po  or.po  pa.po  paprefs.pot  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sr@latin.po  sv.po  ta.po  te.po  th.po  tr.po  uk.po  zh_CN.po
src/: .gitignore  Makefile.am  org.freedesktop.paprefs.gschema.xml  paprefs.cc  paprefs.convert  paprefs.desktop  paprefs.desktop.in  paprefs.glade
